# home-library-api

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/: 20260416134723_create_books_table.sql  20260429153845_cast_string_dates_to_strict_date.sql
src/: handlers.rs  integration.rs  main.rs  models.rs  repository.rs
