[package]
name = "home-library-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "rust_decimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4.44", features = ["serde"] }
rust_decimal = { version = "1.41.0", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }